--- a/css/css.css
+++ b/css/css.css
@@ -95,84 +95,168 @@ button {
 
 /* roboto-regular - latin_cyrillic */
 @font-face {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/roboto-v20-latin_cyrillic-regular.eot');
+    src: url("../fonts/roboto-v20-latin_cyrillic-regular.eot");
     /* IE9 Compat Modes */
-    src: local('Roboto'), local('Roboto-Regular'),
-        url('../fonts/roboto-v20-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'),
+    src: local("Roboto"), local("Roboto-Regular"),
+        url("../fonts/roboto-v20-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"),
         /* IE6-IE8 */
-        url('../fonts/roboto-v20-latin_cyrillic-regular.woff2') format('woff2'),
+        url("../fonts/roboto-v20-latin_cyrillic-regular.woff2") format("woff2"),
         /* Super Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-regular.woff') format('woff'),
+        url("../fonts/roboto-v20-latin_cyrillic-regular.woff") format("woff"),
         /* Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-regular.ttf') format('truetype'),
+        url("../fonts/roboto-v20-latin_cyrillic-regular.ttf") format("truetype"),
         /* Safari, Android, iOS */
-        url('../fonts/roboto-v20-latin_cyrillic-regular.svg#Roboto') format('svg');
+        url("../fonts/roboto-v20-latin_cyrillic-regular.svg#Roboto") format("svg");
     /* Legacy iOS */
 }
 
 /* roboto-500 - latin_cyrillic */
 @font-face {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 500;
-    src: url('../fonts/roboto-v20-latin_cyrillic-500.eot');
+    src: url("../fonts/roboto-v20-latin_cyrillic-500.eot");
     /* IE9 Compat Modes */
-    src: local('Roboto Medium'), local('Roboto-Medium'),
-        url('../fonts/roboto-v20-latin_cyrillic-500.eot?#iefix') format('embedded-opentype'),
+    src: local("Roboto Medium"), local("Roboto-Medium"),
+        url("../fonts/roboto-v20-latin_cyrillic-500.eot?#iefix") format("embedded-opentype"),
         /* IE6-IE8 */
-        url('../fonts/roboto-v20-latin_cyrillic-500.woff2') format('woff2'),
+        url("../fonts/roboto-v20-latin_cyrillic-500.woff2") format("woff2"),
         /* Super Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-500.woff') format('woff'),
+        url("../fonts/roboto-v20-latin_cyrillic-500.woff") format("woff"),
         /* Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-500.ttf') format('truetype'),
+        url("../fonts/roboto-v20-latin_cyrillic-500.ttf") format("truetype"),
         /* Safari, Android, iOS */
-        url('../fonts/roboto-v20-latin_cyrillic-500.svg#Roboto') format('svg');
+        url("../fonts/roboto-v20-latin_cyrillic-500.svg#Roboto") format("svg");
     /* Legacy iOS */
 }
 
 /* roboto-700 - latin_cyrillic */
 @font-face {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 700;
-    src: url('../fonts/roboto-v20-latin_cyrillic-700.eot');
+    src: url("../fonts/roboto-v20-latin_cyrillic-700.eot");
     /* IE9 Compat Modes */
-    src: local('Roboto Bold'), local('Roboto-Bold'),
-        url('../fonts/roboto-v20-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'),
+    src: local("Roboto Bold"), local("Roboto-Bold"),
+        url("../fonts/roboto-v20-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"),
         /* IE6-IE8 */
-        url('../fonts/roboto-v20-latin_cyrillic-700.woff2') format('woff2'),
+        url("../fonts/roboto-v20-latin_cyrillic-700.woff2") format("woff2"),
         /* Super Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-700.woff') format('woff'),
+        url("../fonts/roboto-v20-latin_cyrillic-700.woff") format("woff"),
         /* Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-700.ttf') format('truetype'),
+        url("../fonts/roboto-v20-latin_cyrillic-700.ttf") format("truetype"),
         /* Safari, Android, iOS */
-        url('../fonts/roboto-v20-latin_cyrillic-700.svg#Roboto') format('svg');
+        url("../fonts/roboto-v20-latin_cyrillic-700.svg#Roboto") format("svg");
     /* Legacy iOS */
 }
 
 /* roboto-900 - latin_cyrillic */
 @font-face {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
-    src: url('../fonts/roboto-v20-latin_cyrillic-900.eot');
+    src: url("../fonts/roboto-v20-latin_cyrillic-900.eot");
     /* IE9 Compat Modes */
-    src: local('Roboto Black'), local('Roboto-Black'),
-        url('../fonts/roboto-v20-latin_cyrillic-900.eot?#iefix') format('embedded-opentype'),
+    src: local("Roboto Black"), local("Roboto-Black"),
+        url("../fonts/roboto-v20-latin_cyrillic-900.eot?#iefix") format("embedded-opentype"),
         /* IE6-IE8 */
-        url('../fonts/roboto-v20-latin_cyrillic-900.woff2') format('woff2'),
+        url("../fonts/roboto-v20-latin_cyrillic-900.woff2") format("woff2"),
         /* Super Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-900.woff') format('woff'),
+        url("../fonts/roboto-v20-latin_cyrillic-900.woff") format("woff"),
         /* Modern Browsers */
-        url('../fonts/roboto-v20-latin_cyrillic-900.ttf') format('truetype'),
+        url("../fonts/roboto-v20-latin_cyrillic-900.ttf") format("truetype"),
         /* Safari, Android, iOS */
-        url('../fonts/roboto-v20-latin_cyrillic-900.svg#Roboto') format('svg');
+        url("../fonts/roboto-v20-latin_cyrillic-900.svg#Roboto") format("svg");
     /* Legacy iOS */
 }
 
 button:hover {
     cursor: pointer;
+}
+
+.callback_window {
+
+    position: absolute;
+
+    z-index: 200;
+
+    min-height: 300px;
+    width: 30px;
+
+    background-color: rgba(182, 2, 101, 0.8);
+
+    top: 10%;
+    right: 0;
+
+    padding: 20px;
+
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+    border-radius: 5% 0 0 5%;
+}
+
+.callback_window__form {
+    display: none;
+}
+
+.callback_window label,
+input,
+textarea {
+    display: block;
+}
+
+.callback_window label {
+    color: white;
+}
+
+.callback_window__phone {
+    margin: 20px 0 20px;
+    height: 25px;
+    width: 100%;
+    padding-left: 10px;
+    background: #fbfbfb;
+}
+
+.callback_window__name {
+    margin: 20px 0 20px;
+    height: 25px;
+    width: 100%;
+    padding-left: 10px;
+    background: #fbfbfb;
+}
+
+.callback_window__comment {
+    margin: 20px 0 20px;
+    width: 100%;
+    height: 200px;
+    padding-left: 10px;
+    background: #fbfbfb;
+    resize: none;
+}
+
+.callback_window__send-button {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 45px;
+    border: 1px solid white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background: #fbfbfb;
+    color: #f53f4f;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.callback_window__close-button {
+    position: absolute;
+    top: -25px;
+    left: -25px;
+    height: 50px;
+    width: 50px;
+    background: url(../img/arrow.png) no-repeat center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 100%;
 }
