--- a/css/css.css
+++ b/css/css.css
@@ -260,3 +260,7 @@ textarea {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 100%;
 }
+
+body {
+    background-color: purple;
+}
