--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,6 @@
 html {
-    box-sizing: border-box;
-    /*изменяет алгоритм расчета размера блока,
+  box-sizing: border-box;
+  /*изменяет алгоритм расчета размера блока,
       чтобы свойства width и height задавали размеры не содержимого,
        а размеры блока.*/
 }
@@ -8,32 +8,32 @@ html {
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
-    /*все элементы, а так же псевдо элементы наследуют
+  box-sizing: inherit;
+  /*все элементы, а так же псевдо элементы наследуют
       значение свойства box-sizing*/
 }
 
 body {
-    min-width: 320px;
-    /*задает минимальный размер страницы*/
+  min-width: 320px;
+  /*задает минимальный размер страницы*/
 
-    margin: 0;
-    /*обнуляет margin*/
+  margin: 0;
+  /*обнуляет margin*/
 
-    font-family: Roboto, Roboto;
-    /*задает шрифт и семейство шрифтов для всей страницы*/
-    font-size: 16px;
-    /*задает размер шрифта для всей страницы*/
-    line-height: 0.8;
-    /*задает межстрочный интервал для всей страницы*/
-    letter-spacing: -0.32px;
-    /*задает ширину символов для всей страницы*/
-    color: #000;
-    /*задает основной цвет текста на странице*/
+  font-family: Roboto, Roboto;
+  /*задает шрифт и семейство шрифтов для всей страницы*/
+  font-size: 16px;
+  /*задает размер шрифта для всей страницы*/
+  line-height: 0.8;
+  /*задает межстрочный интервал для всей страницы*/
+  letter-spacing: -0.32px;
+  /*задает ширину символов для всей страницы*/
+  color: #000;
+  /*задает основной цвет текста на странице*/
 
-    background-color: #fff;
-    /*задает цвет фона*/
-    overflow-x: hidden;
+  background-color: #fff;
+  /*задает цвет фона*/
+  overflow-x: hidden;
 }
 
 h1,
@@ -41,222 +41,231 @@ h2,
 h3,
 h4,
 p {
-    margin: 0;
-    /*обнуляет margin в заголовках*/
+  margin: 0;
+  /*обнуляет margin в заголовках*/
 }
 
 img {
-    max-width: 100%;
-    /*задает размер изображений по ширине*/
+  max-width: 100%;
+  /*задает размер изображений по ширине*/
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 ul {
-    margin: 0;
-    /*обнуляет margin в списках*/
-    padding: 0;
+  margin: 0;
+  /*обнуляет margin в списках*/
+  padding: 0;
 }
 
 li {
-    list-style-type: none;
-    /* убирает декоративный элемент списка*/
+  list-style-type: none;
+  /* убирает декоративный элемент списка*/
 }
 
 figure {
-    margin: 0;
+  margin: 0;
 }
 
 form,
 input,
 button {
-    outline: none;
-    border: none;
+  outline: none;
+  border: none;
 }
 
 .visually-hidden {
-    display: none;
+  display: none;
 }
 
 .disable-scroll {
-    height: 100%;
-    overflow: hidden;
+  height: 100%;
+  overflow: hidden;
 }
 
 .fixed-container {
-    position: relative;
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
+  position: relative;
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
 }
 
 /* roboto-regular - latin_cyrillic */
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    src: url("../fonts/roboto-v20-latin_cyrillic-regular.eot");
-    /* IE9 Compat Modes */
-    src: local("Roboto"), local("Roboto-Regular"),
-        url("../fonts/roboto-v20-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"),
-        /* IE6-IE8 */
-        url("../fonts/roboto-v20-latin_cyrillic-regular.woff2") format("woff2"),
-        /* Super Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-regular.woff") format("woff"),
-        /* Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-regular.ttf") format("truetype"),
-        /* Safari, Android, iOS */
-        url("../fonts/roboto-v20-latin_cyrillic-regular.svg#Roboto") format("svg");
-    /* Legacy iOS */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/roboto-v20-latin_cyrillic-regular.eot");
+  /* IE9 Compat Modes */
+  src: local("Roboto"), local("Roboto-Regular"),
+    url("../fonts/roboto-v20-latin_cyrillic-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/roboto-v20-latin_cyrillic-regular.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/roboto-v20-latin_cyrillic-regular.svg#Roboto") format("svg");
+  /* Legacy iOS */
 }
 
 /* roboto-500 - latin_cyrillic */
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 500;
-    src: url("../fonts/roboto-v20-latin_cyrillic-500.eot");
-    /* IE9 Compat Modes */
-    src: local("Roboto Medium"), local("Roboto-Medium"),
-        url("../fonts/roboto-v20-latin_cyrillic-500.eot?#iefix") format("embedded-opentype"),
-        /* IE6-IE8 */
-        url("../fonts/roboto-v20-latin_cyrillic-500.woff2") format("woff2"),
-        /* Super Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-500.woff") format("woff"),
-        /* Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-500.ttf") format("truetype"),
-        /* Safari, Android, iOS */
-        url("../fonts/roboto-v20-latin_cyrillic-500.svg#Roboto") format("svg");
-    /* Legacy iOS */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/roboto-v20-latin_cyrillic-500.eot");
+  /* IE9 Compat Modes */
+  src: local("Roboto Medium"), local("Roboto-Medium"),
+    url("../fonts/roboto-v20-latin_cyrillic-500.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-500.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/roboto-v20-latin_cyrillic-500.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-500.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/roboto-v20-latin_cyrillic-500.svg#Roboto") format("svg");
+  /* Legacy iOS */
 }
 
 /* roboto-700 - latin_cyrillic */
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 700;
-    src: url("../fonts/roboto-v20-latin_cyrillic-700.eot");
-    /* IE9 Compat Modes */
-    src: local("Roboto Bold"), local("Roboto-Bold"),
-        url("../fonts/roboto-v20-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"),
-        /* IE6-IE8 */
-        url("../fonts/roboto-v20-latin_cyrillic-700.woff2") format("woff2"),
-        /* Super Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-700.woff") format("woff"),
-        /* Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-700.ttf") format("truetype"),
-        /* Safari, Android, iOS */
-        url("../fonts/roboto-v20-latin_cyrillic-700.svg#Roboto") format("svg");
-    /* Legacy iOS */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/roboto-v20-latin_cyrillic-700.eot");
+  /* IE9 Compat Modes */
+  src: local("Roboto Bold"), local("Roboto-Bold"),
+    url("../fonts/roboto-v20-latin_cyrillic-700.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-700.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/roboto-v20-latin_cyrillic-700.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-700.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/roboto-v20-latin_cyrillic-700.svg#Roboto") format("svg");
+  /* Legacy iOS */
 }
 
 /* roboto-900 - latin_cyrillic */
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 900;
-    src: url("../fonts/roboto-v20-latin_cyrillic-900.eot");
-    /* IE9 Compat Modes */
-    src: local("Roboto Black"), local("Roboto-Black"),
-        url("../fonts/roboto-v20-latin_cyrillic-900.eot?#iefix") format("embedded-opentype"),
-        /* IE6-IE8 */
-        url("../fonts/roboto-v20-latin_cyrillic-900.woff2") format("woff2"),
-        /* Super Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-900.woff") format("woff"),
-        /* Modern Browsers */
-        url("../fonts/roboto-v20-latin_cyrillic-900.ttf") format("truetype"),
-        /* Safari, Android, iOS */
-        url("../fonts/roboto-v20-latin_cyrillic-900.svg#Roboto") format("svg");
-    /* Legacy iOS */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/roboto-v20-latin_cyrillic-900.eot");
+  /* IE9 Compat Modes */
+  src: local("Roboto Black"), local("Roboto-Black"),
+    url("../fonts/roboto-v20-latin_cyrillic-900.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-900.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/roboto-v20-latin_cyrillic-900.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-900.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/roboto-v20-latin_cyrillic-900.svg#Roboto") format("svg");
+  /* Legacy iOS */
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .callback_window {
+  position: fixed;
 
-    position: absolute;
+  z-index: 25;
 
-    z-index: 200;
+  min-height: 300px;
+  width: 30px;
 
-    min-height: 300px;
-    width: 30px;
+  background: linear-gradient(30deg, #ff8f5a99, #ff2f9699);
 
-    background-color: rgba(182, 2, 101, 0.8);
+  top: 10%;
+  right: 0;
 
-    top: 10%;
-    right: 0;
+  padding: 45px 20px;
 
-    padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 5% 0 0 5%;
 
-    border-radius: 5% 0 0 5%;
+  font-family: "Roboto";
 }
 
 .callback_window__form {
-    display: none;
+  display: none;
 }
 
 .callback_window label,
 input,
 textarea {
-    display: block;
+  display: block;
 }
 
 .callback_window label {
-    color: white;
+  color: white;
 }
 
 .callback_window__phone {
-    margin: 20px 0 20px;
-    height: 25px;
-    width: 100%;
-    padding-left: 10px;
-    background: #fbfbfb;
+  margin: 20px 0 20px;
+  height: 25px;
+  width: 100%;
+  padding-left: 10px;
+  background: #fbfbfb;
 }
 
 .callback_window__name {
-    margin: 20px 0 20px;
-    height: 25px;
-    width: 100%;
-    padding-left: 10px;
-    background: #fbfbfb;
+  margin: 20px 0 20px;
+  height: 25px;
+  width: 100%;
+  padding-left: 10px;
+  background: #fbfbfb;
 }
 
 .callback_window__comment {
-    margin: 20px 0 20px;
-    width: 100%;
-    height: 200px;
-    padding-left: 10px;
-    background: #fbfbfb;
-    resize: none;
+  margin: 20px 0 20px;
+  width: 100%;
+  height: 200px;
+  padding-left: 10px;
+  background: #fbfbfb;
+  resize: none;
 }
 
 .callback_window__send-button {
-    display: block;
-    margin: 0 auto;
-    width: 200px;
-    height: 45px;
-    border: 1px solid white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background: #fbfbfb;
-    color: #f53f4f;
-    font-size: 16px;
-    font-weight: 500;
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  height: 45px;
+  border: 1px solid white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background: #fbfbfb;
+  color: #f53f4f;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .callback_window__close-button {
-    position: absolute;
-    top: -25px;
-    left: -25px;
-    height: 50px;
-    width: 50px;
-    background: url(../img/arrow.png) no-repeat center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 100%;
+  position: absolute;
+  top: -25px;
+  left: -25px;
+  height: 50px;
+  width: 50px;
+  background: url(../img/arrow.png) no-repeat center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 100%;
+}
+
+.error {
+  border: 2px solid green;
 }
