--- a/css/css.css
+++ b/css/css.css
@@ -101,16 +101,15 @@ button {
   src: url("../fonts/roboto-v20-latin_cyrillic-regular.eot");
   /* IE9 Compat Modes */
   src: local("Roboto"), local("Roboto-Regular"),
-    url("../fonts/roboto-v20-latin_cyrillic-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-regular.woff2")
-      format("woff2"),
+    url("../fonts/roboto-v20-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */
+    url("../fonts/roboto-v20-latin_cyrillic-regular.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("../fonts/roboto-v20-latin_cyrillic-regular.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-regular.ttf")
-      format("truetype"),
+    url("../fonts/roboto-v20-latin_cyrillic-regular.woff") format("woff"),
+    /* Modern Browsers */
+    url("../fonts/roboto-v20-latin_cyrillic-regular.ttf") format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/roboto-v20-latin_cyrillic-regular.svg#Roboto") format("svg");
+    url("../fonts/roboto-v20-latin_cyrillic-regular.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 
@@ -122,16 +121,15 @@ button {
   src: url("../fonts/roboto-v20-latin_cyrillic-500.eot");
   /* IE9 Compat Modes */
   src: local("Roboto Medium"), local("Roboto-Medium"),
-    url("../fonts/roboto-v20-latin_cyrillic-500.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-500.woff2")
-      format("woff2"),
+    url("../fonts/roboto-v20-latin_cyrillic-500.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */
+    url("../fonts/roboto-v20-latin_cyrillic-500.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("../fonts/roboto-v20-latin_cyrillic-500.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-500.ttf")
-      format("truetype"),
+    url("../fonts/roboto-v20-latin_cyrillic-500.woff") format("woff"),
+    /* Modern Browsers */
+    url("../fonts/roboto-v20-latin_cyrillic-500.ttf") format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/roboto-v20-latin_cyrillic-500.svg#Roboto") format("svg");
+    url("../fonts/roboto-v20-latin_cyrillic-500.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 
@@ -143,16 +141,15 @@ button {
   src: url("../fonts/roboto-v20-latin_cyrillic-700.eot");
   /* IE9 Compat Modes */
   src: local("Roboto Bold"), local("Roboto-Bold"),
-    url("../fonts/roboto-v20-latin_cyrillic-700.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-700.woff2")
-      format("woff2"),
+    url("../fonts/roboto-v20-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */
+    url("../fonts/roboto-v20-latin_cyrillic-700.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("../fonts/roboto-v20-latin_cyrillic-700.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-700.ttf")
-      format("truetype"),
+    url("../fonts/roboto-v20-latin_cyrillic-700.woff") format("woff"),
+    /* Modern Browsers */
+    url("../fonts/roboto-v20-latin_cyrillic-700.ttf") format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/roboto-v20-latin_cyrillic-700.svg#Roboto") format("svg");
+    url("../fonts/roboto-v20-latin_cyrillic-700.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 
@@ -164,108 +161,18 @@ button {
   src: url("../fonts/roboto-v20-latin_cyrillic-900.eot");
   /* IE9 Compat Modes */
   src: local("Roboto Black"), local("Roboto-Black"),
-    url("../fonts/roboto-v20-latin_cyrillic-900.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/roboto-v20-latin_cyrillic-900.woff2")
-      format("woff2"),
+    url("../fonts/roboto-v20-latin_cyrillic-900.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */
+    url("../fonts/roboto-v20-latin_cyrillic-900.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("../fonts/roboto-v20-latin_cyrillic-900.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/roboto-v20-latin_cyrillic-900.ttf")
-      format("truetype"),
+    url("../fonts/roboto-v20-latin_cyrillic-900.woff") format("woff"),
+    /* Modern Browsers */
+    url("../fonts/roboto-v20-latin_cyrillic-900.ttf") format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/roboto-v20-latin_cyrillic-900.svg#Roboto") format("svg");
+    url("../fonts/roboto-v20-latin_cyrillic-900.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 
 button:hover {
   cursor: pointer;
-}
-
-.callback_window {
-  position: fixed;
-
-  z-index: 25;
-
-  min-height: 300px;
-  width: 30px;
-
-  background: linear-gradient(30deg, #ff8f5a99, #ff2f9699);
-
-  top: 10%;
-  right: 0;
-
-  padding: 45px 20px;
-
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
-  border-radius: 5% 0 0 5%;
-
-  font-family: "Roboto";
-}
-
-.callback_window__form {
-  display: none;
-}
-
-.callback_window label,
-input,
-textarea {
-  display: block;
-}
-
-.callback_window label {
-  color: white;
-}
-
-.callback_window__phone {
-  margin: 20px 0 20px;
-  height: 25px;
-  width: 100%;
-  padding-left: 10px;
-  background: #fbfbfb;
-}
-
-.callback_window__name {
-  margin: 20px 0 20px;
-  height: 25px;
-  width: 100%;
-  padding-left: 10px;
-  background: #fbfbfb;
-}
-
-.callback_window__comment {
-  margin: 20px 0 20px;
-  width: 100%;
-  height: 200px;
-  padding-left: 10px;
-  background: #fbfbfb;
-  resize: none;
-}
-
-.callback_window__send-button {
-  display: block;
-  margin: 0 auto;
-  width: 200px;
-  height: 45px;
-  border: 1px solid white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  background: #fbfbfb;
-  color: #f53f4f;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.callback_window__close-button {
-  position: absolute;
-  top: -25px;
-  left: -25px;
-  height: 50px;
-  width: 50px;
-  background: url(../img/arrow.png) no-repeat center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  border-radius: 100%;
-}
-
-.error {
-  border: 2px solid green;
 }
